# stm32f0x0-hal

./: CHANGELOG.md  Cargo.toml  README.md  README.org
src/: flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  timer.rs
