[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Teo Klestrup Röijezon <teo@nullable.se>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F0x0 family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f0x0-hal"
repository = "https://github.com/PicoNodes/stm32f0x0-hal"
version = "0.1.0"

[dependencies]
cortex-m = "0.4.0"
embedded-hal = "0.1.0"
nb = "0.1.0"

[dependencies.stm32f0x0]
git = "https://github.com/PicoNodes/stm32f0x0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["stm32f0x0/rt"]
